Fix window overflow

--- a/src/workbench/Workbench.scss
+++ b/src/workbench/Workbench.scss
@@ -1,12 +1,6 @@
 
-pre {
-    background-color: #f9fcff;
-    padding: 1rem;
-    border: 1px solid #e0e0e0;
-}
-
 .workbench {
-    margin: 0.5rem;
+    padding: 1rem;
     width: calc(100% - 1rem);
     height: calc(100% - 2rem);
 }
@@ -17,6 +11,6 @@ pre {
 }
 
 .workspace {
-    height: calc(100% - 4rem);
+    height: calc(100% - 2rem);
 }
 
